--- a/collab/requirements.txt
+++ b/collab/requirements.txt
@@ -1,44 +1,22 @@
-# LangChain RAG Pipeline Dependencies for Collab Folder
-# Using latest versions without pinning - let pip resolve compatibility automatically
-langchain
-langchain-openai
-langchain-pinecone
-langchain-community
+streamlit>=1.28.0
+langchain>=0.0.350
+langchain-community>=0.0.10
+langchain-openai>=0.0.5
+openai>=1.3.0
+pinecone>=3.0.0
+PyPDF2>=3.0.1
+pandas>=2.0.0
+requests>=2.31.0
+httpx>=0.25.0
+python-dotenv>=1.0.0
+PyGithub>=1.59.0
+websockets>=11.0.0
+fastapi>=0.104.0
+uvicorn>=0.24.0
+flask>=2.0.0
+flask-cors>=3.0.0
 
-# Document loaders
-pypdf
-beautifulsoup4
-requests
-unstructured
-python-multipart
-
-# Pinecone
-pinecone-client
-
-# OpenAI
-openai
-
-# Text processing
-tiktoken
-
-# Interactive interface
-jupyter
-ipywidgets
-tqdm
-
-# Utilities
-python-dotenv
-pydantic
-
-# Additional dependencies for GitHub codebase loading
-gitpython
-pygithub
-
-# Database and caching dependencies
-asyncpg
-redis
-psycopg2-binary
-
-# Testing dependencies
-pytest
-pytest-asyncio
+# Selenium dependencies for JavaScript-heavy website loading
+selenium>=4.15.0
+webdriver-manager>=4.0.0
+unstructured>=0.10.0
