--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -82,6 +82,7 @@ services:
       - WATCHPACK_POLLING=true
     volumes:
       - ./react-frontend:/app
+      - /app/node_modules
     depends_on:
       - backend
       - collab
