--- a/react-frontend/Dockerfile.dev
+++ b/react-frontend/Dockerfile.dev
@@ -15,5 +15,5 @@ COPY . .
 # Expose port
 EXPOSE 3000
 
-# Start development server
-CMD ["npm", "start"]
+# Start development server with fallback dependency installation
+CMD ["sh", "-c", "npm install && npm start"]
