--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -10,6 +10,7 @@
     "react-dropzone": "^14.2.0",
     "react-markdown": "^8.0.0",
     "react-router-dom": "^6.8.0",
+    "remark-gfm": "^3.0.1",
     "socket.io-client": "^4.7.0"
   },
   "scripts": {
